# Skill

./: .gitignore
tgb-market-v-skill-pipeline/: .gitignore  README.md  pyproject.toml
tgb-market-v-skill-pipeline/configs/: article_discovery.yaml  article_seeds.yaml  crawl.yaml  ocr.yaml  target.yaml
tgb-market-v-skill-pipeline/data/: README.md
tgb-market-v-skill-pipeline/prompts/: build_methodology_profile.md  extract_claims.md  review_claims.md
tgb-market-v-skill-pipeline/reports/: review_encoding_audit.md  review_ready_curated_profile.md  review_ready_curation_report.md  text_encoding_audit.md
tgb-market-v-skill-pipeline/tests/: __init__.py  export_fixture_data.py  skill_fixture_data.py  test_accepted_recheck_pack.py  test_aoch_filter.py  test_apply_review.py  test_article_inventory.py  test_article_inventory_audit.py  test_article_seed_candidate_report.py  test_article_seeds.py  test_author_audit.py  test_author_filter.py  test_build_review_ready_cli.py  test_build_skill_v0_cli.py  test_claim_extract.py  test_claim_noise_report.py  test_claim_quality.py  test_claim_ranking.py  test_claim_review_queue.py  test_claim_sampling_report.py  test_cli.py  test_comment_audit.py  test_comment_checkpoint.py  test_comment_completion_plan.py  test_comment_completion_report.py  test_comment_completion_tasks.py  test_comment_crawl_loop_last_page.py  test_comment_plan_inconsistent_state.py  test_comment_state_warnings.py  test_comment_tasks.py  test_config.py  test_crawl_comments_resume.py  test_crawl_error_handling.py  test_crawl_error_resolution.py  test_curation_report.py  (+65 more)
(+145 files in other folders)
